# commitr

./: .goreleaser.yaml  Cargo.toml  rustfmt.toml
.github/workflows/: release.yml
src/: git_ops.rs  lib.rs  main.rs
src/ui/: confetti.rs  mod.rs  splash.rs
