[package]
name = "commitr"
version = "1.0.0"
edition = "2024"
authors = ["Ellie Kerns <ellie@epklabs.com>"]

[dependencies]
git2 = "0.20.0"
inquire = { version = "0.7.5", features = ["editor"]}
colored = "3"
indicatif = "0.17.11"
crossterm = "0.28.1"
rand = "0.9.0"
tui-rain = "1.0.1"
openssl = { version = "0.10", features = ["vendored"] }
